add error message and redirect admin page

--- a/assets/user/css/style.css
+++ b/assets/user/css/style.css
@@ -189,3 +189,11 @@ a{
 .bus-book{
     width: 100%;
 }
+
+#bus-message{
+    position: absolute;
+    top: 20px;
+    left: 30%;
+    font-size: 30px;
+    color: #ff0d0d;
+}
