search final correction

--- a/assets/user/css/style.css
+++ b/assets/user/css/style.css
@@ -226,3 +226,8 @@ color: white !important;
     font-size: 30px;
     color: #ff0d0d;
 }
+#seatz{
+    position: absolute;
+    right: 10px;
+    margin-top: 27px;
+}
