--- a/assets/user/css/style.css
+++ b/assets/user/css/style.css
@@ -220,9 +220,7 @@ color: white !important;
     font-size: 32px;
 }
 #bus-message{
-    position: absolute;
-    top: 20px;
-    left: 30%;
+    text-align: center;
     font-size: 30px;
     color: #ff0d0d;
 }
