--- a/assets/user/css/style.css
+++ b/assets/user/css/style.css
@@ -229,3 +229,9 @@ color: white !important;
     right: 10px;
     margin-top: 27px;
 }
+
+.alert{
+    width: 50%;
+    margin: 20px auto;
+    text-align: center;
+}
